--- a/css/style.css
+++ b/css/style.css
@@ -1344,7 +1344,7 @@ Icon for all respective meta
 
 #pre-status,
 .preload-placeholder {
-	background-image: url(../images/preloader.gif);
+	/* background-image: url(../images/preloader.gif); */
 	background-position: center;
 	background-repeat: no-repeat;
 	height: 200px;
